feat: add cookie-session anonymous board comments
Implement cookie-session ownership for anonymous posts and comments.

- Add server-issued anonymous session cookie ownership
- Add comment domain, API, DTOs, service, and repository
- Centralize CORS and cookie deployment settings
- Add request validation and API error handling
- Refactor React state into reducer/action flow
- Keep axios behind an API client with credentials enabled
- Improve responsive anonymous board UI